--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,45 @@
             overflow-x: hidden;
             overflow-y: hidden;
         }
+
+        .div-relative {
+            position: relative;
+            color: #000;
+            border: 1px solid #000;
+            width: 500px;
+            height: 400px
+        }
+
+        #viewer {
+            position: absolute;
+            right: 8%;
+            bottom: 8%;
+            width: 20%;
+            height: 0;
+            padding-bottom: 20%;
+            background: #FF0000;
+            opacity: 0.05;
+            border-radius: 100%;
+        }
+
+        #mover {
+            position: absolute;
+            left: 8%;
+            bottom: 8%;
+            width: 20%;
+            height: 0;
+            padding-bottom: 20%;
+            background: #FF0;
+            opacity: 0.05;
+            border-radius: 100%;
+        }
     </style>
 </head>
 
 <body>
-
+    <div id="viewer">
+    </div>
+    <div id='mover'></div>
 </body>
 
 </html>
