--- a/src/index.html
+++ b/src/index.html
@@ -47,9 +47,10 @@
 </head>
 
 <body>
-    <div id="viewer">
+    <div id="scene">
+        <div id="viewer">
+        </div>
+        <div id='mover'></div>
     </div>
-    <div id='mover'></div>
 </body>
-
 </html>
